data/data-analysis/src/main/kubernetes/openshift.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: data-analysis
  namespace: mlops
spec:
  hosts:
    - data-analysis
  http:
    - route:
        - destination:
            host: data-analysis
            subset: v1
---
apiVersion: v1
kind: Service
metadata:
  name: data-analysis
  labels:
    app: data-analysis
    service: data-analysis
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: data-analysis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-analysis-v1
  labels:
    app: data-analysis
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-analysis
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: reviews
        version: v1
    spec:
      serviceAccountName: data-analysis
      containers:
        - name: data-analysis
          image:  image-registry.openshift-image-registry.svc:5000/mlops/data-analysis
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: wlp-output
              mountPath: /opt/ibm/wlp/output
      volumes:
        - name: wlp-output
          emptyDir: {}
        - name: tmp
          emptyDir: {}
